<resources>
    <string name="app_name">Cocktails</string>
    <string name="cocktails_name">Cocktail Name</string>
    <string name="title_main">cocktails</string>
    <string name="title_favorites">favorites</string>
    <string name="title_search">search</string>

    <string name="video_title">Video</string>
    <string name="alcoholic_title">Alcohol</string>
    <string name="instruction_title">Instruction</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="measure_title">Measure</string>
    <string name="category_title">Category</string>

    <string name="instruction_stub">Rub the rim of the glass with the lime slice to make the salt stick to it. Take care to moisten only the outer rim and sprinkle the salt on it. The salt should present to the lips of the imbiber and never mix into the cocktail. Shake the other ingredients with ice, then carefully pour into the glass.</string>
    <string name="ingredient_name_stub">Light rum</string>
    <string name="measure_stub"><![CDATA[&#189; oz]]></string>
    <string name="clicked_tag">yes</string>
    <string name="not_clicked_tag">no</string>
    <string name="no_favorite">No favorite cocktails..</string>

    <string name="filter_title">filter</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="no_alcohol">No alcohol</string>
    <string name="search">Search</string>

    <string name="search_query_hint">cocktail\'s name or ingredient</string>
</resources>
