<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings_menu"
        android:title="@string/settings"/>

    <item
        android:id="@+id/about_menu"
        android:title="@string/about"/>

    <item
        android:id="@+id/filter_menu"
        app:showAsAction="always"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter_title">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/alcohol_menu"
                    android:checked="true"
                    android:title="@string/alcoholic_title" />
                <item
                    android:id="@+id/no_alcohol_menu"
                    android:title="@string/no_alcohol"/>
            </group>
        </menu>
    </item>

</menu>